fix tags alignment on mobile

--- a/_css/frontpage.css
+++ b/_css/frontpage.css
@@ -51,3 +51,10 @@
   padding-right: 5px;
   margin-right: 2px;
 }
+
+@media (max-width: 992px) {
+  .summary-meta ul.tags {
+    text-align: left;
+    margin-top: 10px;
+  }
+}
